Added the mapbox gl npm Migrated the styling in the ItineraryDetailPage.vue

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
     <title>Netmobiel</title>
     <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link
+            href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css"
+            rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>
