--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <!-- Ybug code start (https://ybug.io) -->
     <script type='text/javascript'>
       (function() {
-        window.ybug_settings = {"id": "<%= VUE_APP_YBUG_ID %>"};
+        window.ybug_settings = {"id": "rh60zd3k1nvkbhy2kkgj"};
         var ybug = document.createElement('script'); ybug.type = 'text/javascript'; ybug.async = true;
         ybug.src = 'https://widget.ybug.io/button/'+window.ybug_settings.id+'.js';
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ybug, s);
