--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,15 @@
     <!-- Ybug code start (https://ybug.io) -->
     <script type='text/javascript'>
       (function() {
-        window.ybug_settings = {"id": "rh60zd3k1nvkbhy2kkgj"};
-        var ybug = document.createElement('script'); ybug.type = 'text/javascript'; ybug.async = true;
-        ybug.src = 'https://widget.ybug.io/button/'+window.ybug_settings.id+'.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ybug, s);
+        window.ybug_settings = {
+          id: 'rh60zd3k1nvkbhy2kkgj'
+        };
+        const ybug = document.createElement('script');
+        ybug.type = 'text/javascript';
+        ybug.async = true;
+        ybug.src = 'https://widget.ybug.io/button/' + window.ybug_settings.id + '.js';
+        const s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(ybug, s);
       })();
     </script>
     <!-- Ybug code end -->
